2003-08-05 Mariusz Woloszyn
	* library.c: return thumbnauil when asked for GP_FILE_TYPE_EXIF if
	  object is PTP_OFC_EXIF_JPEG, otherwise return 
	  GP_ERROR_NOT_SUPPORTED
2003-08-03 Mariusz Woloszyn
	* library.c: PTP do not offer plain EXIF data; return
	  GP_ERROR_NOT_SUPPORTED while downloading GP_FILE_TYPE_EXIF.
2003-08-29 Mariusz Woloszyn
	* library.c: allow downloading thumbnail of nonimage objects,
	  however only in case that the ThumbCompressedSize is greater than 0
2003-08-28 Mariusz Woloszyn
	* library.c: added Canon IXUS 400, thanks to Till Kamppeter
2003-08-28 Mariusz Woloszyn
	* library.c: added Nikon Coolpix 3500, 5000, 3100 & 2100, thanks to
	  Antti Tuominen
2003-08-22 Mariusz Woloszyn
	* library.c: added Nikon CoolPix 4500 and HP PhotoSmart 935, thanks
	  to T. Kaproncai
2003-07-28 Mariusz Woloszyn
	* library.c: removed Kodak DC290, DX4230, DX4300, changed productID
	  of Kodak CX4210 and added Nikon Coolpix 5400. Thanks to T.
	  Kaproncai
2003-07-17 Mariusz Woloszyn
	* library.c: added following cameras: Kodak DC290, Kodak DX4530,
	  Kodak DX6440, Kodak DX6490, Kodak LS663, Kodak CX4230,
	  Kodak CX6200, Kodak CX6230, Kodak CX6330, HP PhotoSmart 120,
	  HP PhotoSmart 620, HP PhotoSmart 735, HP PhotoSmart 812
2003-07-09 Mariusz Woloszyn
	* library.c: added Nikon Coolpix SQ: M. Holzbauer
2003-06-12 Mariusz Woloszyn
	* library.c: added DX6340 explicite support
2003-05-14 Mariusz Woloszyn
	* ptpcam.c: changed test_ptp.c to ptpcam.c;
	* Makefile.am: changed test_ptp.c to ptpcam.c;
	* TODO: added the idea of error reporting improvement
	* README: reorganized a bit
2003-05-13 Mariusz Woloszyn
	* ptp-pack.c: ptp_pack_DPV() fixup;
	* ptp.c: reorganized reporting errors, added ptp_perror();
	* ptp.h: added ptp_perror() prototype;
	* test_ptp.c: reorganized reporting errors; added property setting
	  support!
2003-05-12 Mariusz Woloszyn
	* ptp.c: fflush(stderr) on error and debug; 
	  added datatype argument for ptp_getdevicepropvalue();