@@ -1,4 +1,7 @@
 2003-08-05 Mariusz Woloszyn
+	* library.c: ups... PTP_OFC_EXIF_JPEG thumbnails may not contain
+	  EXIF information... revertig to previous behavior :(
+2003-08-05 Mariusz Woloszyn
 	* library.c: return thumbnauil when asked for GP_FILE_TYPE_EXIF if
 	  object is PTP_OFC_EXIF_JPEG, otherwise return 
 	  GP_ERROR_NOT_SUPPORTED
